Prevent overlapping of backend header and live preview controls.

--- a/resources/sass/cp.scss
+++ b/resources/sass/cp.scss
@@ -2,9 +2,12 @@
   .z-1000 {
     z-index: 1000;
   }
+  .live-preview {
+    top: 88px;
+  }
   @media (min-width: 768px) {
-      #main {
-          padding-top: 88px;
-      }
+    #main {
+      padding-top: 88px;
+    }
   }
 }
